Created login api by using kanpai validation, created search api and finally created registration api
